--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 @font-face {
             font-family: 'Inter2';
             src: url(font/InterVariable.ttf);
+
 }
         /*Variáveis globais de cor para facilitar a mudança*/
         :root{
@@ -109,23 +110,46 @@
             font-weight: normal;
         }
 
+        .contato_inicio{ /* CSS do botão contato na parte inicial */
+            margin-top: 20px;
+            margin-left: 8px;
+        }
+
+
         .rodape{ /* CSS do rodapé */
             background-color: var(--color-bgh);
             font-family: Inter;
             margin-top: 10px;
             width: 100%;
-            height: 40px;
-            /*position: fixed;  fixa o rodapé na parte inferior da página */
+            height: 100px;
+            position: fixed;  
             bottom: 0;
             left: 0;
             
         }
 
-        .rodape p{ /* CSS do texto do rodapé */
+        .endereco{ /* CSS do endereço do rodapé */
             color: var(--color-text);
-            font-size: 10px;
+            font-family: Inter2;
+            font-size: 15px;
             text-align: center;
-            padding: 15px 0px;
+            margin-top: 30px;
+            margin-left: 1300px;
+        }
+
+        .contato{ /* CSS do texto contato no rodapé */
+            color: var(--color-text);
+            font-family: Inter2;
+            margin-top: -20px;
+            text-align: center;
+        }
+
+        .icones{ /* CSS dos ícones no rodapé */
+            color: var(--color-text);
+            font-size: 25px;
+            margin-top: -30px;
+            margin-left: 20px;
+            text-align: left;
         }
 
         .imagem_inicio{ /* CSS da imagem inicial */
