--- a/style.css
+++ b/style.css
@@ -139,7 +139,12 @@
             
 
         }
+        .btnzap a {
+            color: white;
+            text-decoration: none;
+        
 
+        }
 
         .btnzap:hover { /* CSS do botão whatsapp ao passar o mouse */
             background-color: white;
@@ -148,7 +153,7 @@
             transform: translateY(-3px);
             color: var(--color-zap);
         }
-          .btnzap a {
+        *.btnzap a:hover {
             color: var(--color-zap);
             text-decoration: none;
         
